--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "a todo api",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest",
+    "cov": "jest --coverage",
+    "lint": "eslint '**/*.js'",
+    "build": "node build.js",
+    "knip": "knip"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "sql.js": "^1.6.0",
-    "lodash": "4.17.20",
-    "moment": "2.29.1"
+    "sql.js": "^1.6.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^10.0.1",
+    "@types/node": "^25.3.0",
+    "esbuild": "^0.27.3",
+    "eslint": "^10.0.1",
+    "globals": "^17.3.0",
+    "jest": "^29.0.0",
+    "knip": "^5.85.0",
+    "supertest": "^6.3.0"
   }
 }
